add fat targets

--- a/src/proj/bglda/SConscript
+++ b/src/proj/bglda/SConscript
@@ -6,6 +6,7 @@ Import('env', 'lowl', 'pylowl', 'lowl_env', 'pylowl_env', 'write_run_sh')
 
 Help('''
         bglda           Build bglda
+        bglda-fat       Build bglda, copy dependencies into build dir
         bglda-install   Install bglda
 '''.lstrip('\r\n'))
 
@@ -13,9 +14,9 @@ Help('''
 bglda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', Glob('*.py')])
 env.Alias('bglda', bglda)
 
-bglda_fat = env.Command([lowl[0].name, pylowl[0].name], [lowl, pylowl, bglda],
-    [Copy(lowl[0].name, lowl[0]), Copy(pylowl[0].name, pylowl[0])])
-env.Alias('bglda-fat', bglda_fat)
+bglda_fat_lowl = env.Command(lowl[0].name, lowl, Copy('$TARGET', '$SOURCE'))
+bglda_fat_pylowl = env.Command(pylowl[0].name, pylowl, Copy('$TARGET', '$SOURCE'))
+bglda_fat = env.Alias('bglda-fat', [bglda_fat_lowl, bglda_fat_pylowl, bglda])
 
 install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=['bglda_run', 'data.py', '__init__.py'])
 
