--- a/src/proj/pflda/SConscript
+++ b/src/proj/pflda/SConscript
@@ -10,10 +10,9 @@ Help('''
 '''.lstrip('\r\n'))
 
 
-pflda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', Glob('*.py'), Glob('*.r'), Glob('*.sh'), Glob('*.qsub'), Glob('experiments/*.sh')])
+run_sh = env.Command('run.sh', [], write_run_sh)
+
+pflda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', Glob('*.py'), Glob('*.r'), Glob('*.sh'), Glob('*.qsub'), Glob('experiments/*.sh'), 'pflda_run_pf', 'pflda_run_gibbs', run_sh])
 env.Alias('pflda', pflda)
 
 install_pflda = env.DistutilsInstall('pflda-install', pflda, deps=['pflda_run_pf', 'pflda_run_gibbs', 'data.py', '__init__.py'])
-
-run_sh = env.Command('run.sh', [], write_run_sh)
-env.Alias('pflda-run-sh', run_sh)
