--- a/src/proj/bglda/SConscript
+++ b/src/proj/bglda/SConscript
@@ -6,11 +6,16 @@ Import('env', 'lowl', 'pylowl')
 
 Help('''
         bglda           Build bglda
+        bglda-fat       Build bglda, copy dependencies into build dir
         bglda-install   Install bglda
 '''.lstrip('\r\n'))
 
 
 bglda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', Glob('*.py'), 'bglda_run'])
 env.Alias('bglda', bglda)
+
+bglda_fat_lowl = env.Command(lowl[0].name, lowl, Copy('$TARGET', '$SOURCE'))
+bglda_fat_pylowl = env.Command(pylowl[0].name, pylowl, Copy('$TARGET', '$SOURCE'))
+bglda_fat = env.Alias('bglda-fat', [bglda_fat_lowl, bglda_fat_pylowl, bglda])
 
 install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=['bglda_run', 'data.py', '__init__.py'])
