--- a/src/proj/pflda/SConscript
+++ b/src/proj/pflda/SConscript
@@ -6,11 +6,16 @@ Import('env', 'lowl', 'pylowl')
 
 Help('''
         pflda           Build pflda
+        pflda-fat       Build pflda, copy dependencies into build dir
         pflda-install   Install pflda
 '''.lstrip('\r\n'))
 
 
 pflda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', Glob('*.py'), Glob('*.r'), Glob('*.sh'), Glob('*.qsub'), Glob('experiments/*.sh'), 'pflda_run_pf', 'pflda_run_gibbs'])
 env.Alias('pflda', pflda)
+
+pflda_fat_lowl = env.Command(lowl[0].name, lowl, Copy('$TARGET', '$SOURCE'))
+pflda_fat_pylowl = env.Command(pylowl[0].name, pylowl, Copy('$TARGET', '$SOURCE'))
+pflda_fat = env.Alias('pflda-fat', [pflda_fat_lowl, pflda_fat_pylowl, pflda])
 
 install_pflda = env.DistutilsInstall('pflda-install', pflda, deps=['pflda_run_pf', 'pflda_run_gibbs', 'data.py', '__init__.py'])
