--- a/src/proj/bglda/SConscript
+++ b/src/proj/bglda/SConscript
@@ -18,4 +18,4 @@ bglda_fat_lowl = env.Command(lowl[0].name, lowl, Copy('$TARGET', '$SOURCE'))
 bglda_fat_pylowl = env.Command(pylowl[0].name, pylowl, Copy('$TARGET', '$SOURCE'))
 bglda_fat = env.Alias('bglda-fat', [bglda_fat_lowl, bglda_fat_pylowl, bglda])
 
-install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=['bglda_run', 'data.py', '__init__.py'])
+install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=[Glob('bglda/*.py'), 'bglda_run'])
