--- a/src/lowl/Makefile.in
+++ b/src/lowl/Makefile.in
@@ -1,5 +1,6 @@
-LOWL_LIB_NAME = lowl
-LOWL_LIB_FILENAME = lib$(LOWL_LIB_NAME)$(SHLIB_SUFFIX)
+LOWL_LIB_SHORTNAME = lowl
+LOWL_LIB_NAME = lib$(LOWL_LIB_SHORTNAME)$(SHLIB_SUFFIX)
+LOWL_LIB_FILENAME = $(LOWL_LIB_NAME)
 LOWL_LIB = $(LOWL_BLD_DIR)/$(LOWL_LIB_FILENAME)
 
 LOWL_TESTS_SOURCE = $(LOWL_SRC_DIR)/tests.c
@@ -14,11 +15,11 @@ $(LOWL_BLD_DIR)/%.o: $(LOWL_SRC_DIR)/%.c $(LOWL_SRC_DIR)/%.h
 
 $(LOWL_LIB): $(LOWL_OBJECTS)
 	@mkdir -p $(LOWL_BLD_DIR)
-	$(CC) -std=gnu99 -shared -o $(LOWL_LIB) $(LOWL_OBJECTS) -lm
+	$(CC) -std=gnu99 -shared -Wl,-soname,$(LOWL_LIB_NAME) -o $(LOWL_LIB) $(LOWL_OBJECTS) -lm
 
 $(LOWL_TESTS): $(LOWL_TESTS_SOURCE) $(LOWL_LIB)
 	@mkdir -p $(LOWL_BLD_DIR)
-	$(CC) -std=gnu99 -o $@ $< -L$(LOWL_BLD_DIR) -l$(LOWL_LIB_NAME) -lm
+	$(CC) -std=gnu99 -o $@ $< -L$(LOWL_BLD_DIR) -l$(LOWL_LIB_SHORTNAME) -lm
 
 .PHONY: lowl
 lowl: $(LOWL_LIB)
