--- a/src/pylowl/Makefile.in
+++ b/src/pylowl/Makefile.in
@@ -1,5 +1,4 @@
-PYLOWL_LIB_NAME = pylowl
-PYLOWL_LIB_FILENAME = $(PYLOWL_LIB_NAME)$(SHLIB_SUFFIX)
+PYLOWL_LIB_FILENAME = pylowl$(SHLIB_SUFFIX)
 PYLOWL_LIB = $(PYLOWL_BLD_DIR)/$(PYLOWL_LIB_FILENAME)
 
 PYLOWL_PYX = $(PYLOWL_SRC_DIR)/pylowl.pyx
