hacks to make install work

--- a/src/lowl/Makefile.in
+++ b/src/lowl/Makefile.in
@@ -28,3 +28,7 @@ lowl: $(LOWL_LIB)
 lowl-tests: export $(SHLIB_PATH_ENV_VAR)=$(LOWL_BLD_DIR)
 lowl-tests: $(LOWL_TESTS)
 	./$(LOWL_TESTS)
+
+.PHONY: lowl-install
+lowl-install: $(LOWL_LIB)
+	install -m 0755 $(LOWL_LIB) $(INSTALL_PREFIX)/lib
