--- a/src/proj/pflda/Makefile.in
+++ b/src/proj/pflda/Makefile.in
@@ -1,6 +1,6 @@
 PFLDA_LIB = $(PFLDA_PROJ_BLD_DIR)/pflda
 
-PFLDA_SOURCES = $(wildcard $(PFLDA_PROJ_SRC_DIR)/*) $(wildcard $(PFLDA_PROJ_SRC_DIR)/bglda_run_*)
+PFLDA_SOURCES = $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda/*) $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda_run_*)
 
 $(PFLDA_LIB): $(PFLDA_PROJ_SRC_DIR)/setup.py $(PFLDA_SOURCES) $(LOWL_LIB) $(PYLOWL_LIB)
 	mkdir -p $(PFLDA_PROJ_BLD_DIR)
@@ -13,3 +13,12 @@ pflda: $(PFLDA_LIB)
 pflda-fat: $(PFLDA_LIB)
 	cp $(LOWL_LIB) $(PFLDA_PROJ_BLD_DIR)/
 	cp $(PYLOWL_LIB) $(PFLDA_PROJ_BLD_DIR)/
+
+.PHONY: pflda-install
+pflda-install: export C_INCLUDE_PATH=$(CURDIR)/$(LOWL_SRC_DIR)
+pflda-install: export LIBRARY_PATH=$(CURDIR)/$(LOWL_BLD_DIR)
+pflda-install: pflda-fat
+	cp $(PFLDA_PROJ_SRC_DIR)/pflda_run_gibbs $(PFLDA_PROJ_BLD_DIR)/
+	cp $(PFLDA_PROJ_SRC_DIR)/pflda_run_pf $(PFLDA_PROJ_BLD_DIR)/
+	cp $(PFLDA_PROJ_SRC_DIR)/pflda/* $(PFLDA_PROJ_BLD_DIR)/pflda/
+	cd $(PFLDA_PROJ_BLD_DIR) && $(PYTHON) $(CURDIR)/$(PFLDA_PROJ_SRC_DIR)/setup.py install $(DISTUTILS_INSTALL_FLAGS)
