--- a/src/proj/bglda/Makefile.in
+++ b/src/proj/bglda/Makefile.in
@@ -1,6 +1,6 @@
 BGLDA_LIB = $(BGLDA_PROJ_BLD_DIR)/bglda
 
-BGLDA_SOURCES = $(wildcard $(BGLDA_PROJ_SRC_DIR)/*) $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda_run_*)
+BGLDA_SOURCES = $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda/*) $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda_run)
 
 $(BGLDA_LIB): $(BGLDA_PROJ_SRC_DIR)/setup.py $(BGLDA_SOURCES) $(LOWL_LIB) $(PYLOWL_LIB)
 	mkdir -p $(BGLDA_PROJ_BLD_DIR)
@@ -13,3 +13,11 @@ bglda: $(BGLDA_LIB)
 bglda-fat: $(BGLDA_LIB)
 	cp $(LOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
 	cp $(PYLOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
+
+.PHONY: bglda-install
+bglda-install: export C_INCLUDE_PATH=$(CURDIR)/$(LOWL_SRC_DIR)
+bglda-install: export LIBRARY_PATH=$(CURDIR)/$(LOWL_BLD_DIR)
+bglda-install: bglda-fat
+	cp $(BGLDA_PROJ_SRC_DIR)/bglda_run $(BGLDA_PROJ_BLD_DIR)/
+	cp $(BGLDA_PROJ_SRC_DIR)/bglda/* $(BGLDA_PROJ_BLD_DIR)/bglda/
+	cd $(BGLDA_PROJ_BLD_DIR) && $(PYTHON) $(CURDIR)/$(BGLDA_PROJ_SRC_DIR)/setup.py install $(DISTUTILS_INSTALL_FLAGS)
