--- a/src/pylowl/Makefile.in
+++ b/src/pylowl/Makefile.in
@@ -2,7 +2,8 @@ PYLOWL_LIB_FILENAME = pylowl$(SHLIB_SUFFIX)
 PYLOWL_LIB = $(PYLOWL_BLD_DIR)/$(PYLOWL_LIB_FILENAME)
 
 PYLOWL_PYX = $(PYLOWL_SRC_DIR)/pylowl.pyx
-PYLOWL_SOURCES = $(PYLOWL_SRC_DIR)/lowl.pxd $(PYLOWL_PYX)
+PYLOWL_LOWL_PXD = $(PYLOWL_SRC_DIR)/lowl.pxd
+PYLOWL_SOURCES = $(PYLOWL_LOWL_PXD) $(PYLOWL_PYX)
 
 $(PYLOWL_LIB): $(PYLOWL_SRC_DIR)/setup.py $(PYLOWL_SOURCES) $(LOWL_LIB)
 	mkdir -p $(PYLOWL_BLD_DIR)
@@ -20,3 +21,10 @@ pylowl-tests: export $(SHLIB_PATH_ENV_VAR)=$(LOWL_BLD_DIR)
 pylowl-tests: export PYTHONPATH=$(PYLOWL_BLD_DIR)
 pylowl-tests: $(PYLOWL_LIB) $(PYLOWL_PYX)
 	$(PYTHON) -m doctest --doctest-extension=pyx -v $(PYLOWL_PYX)
+
+.PHONY: pylowl-install
+pylowl-install: export C_INCLUDE_PATH=$(CURDIR)/$(LOWL_SRC_DIR)
+pylowl-install: export LIBRARY_PATH=$(CURDIR)/$(LOWL_BLD_DIR)
+pylowl-install: $(PYLOWL_LIB)
+	cp $(PYLOWL_PYX) $(PYLOWL_BLD_DIR)/
+	cd $(PYLOWL_BLD_DIR) && $(PYTHON) $(CURDIR)/$(PYLOWL_SRC_DIR)/setup.py install $(DISTUTILS_INSTALL_FLAGS)
