--- a/src/proj/bglda/Makefile.in
+++ b/src/proj/bglda/Makefile.in
@@ -1,21 +1,23 @@
-BGLDA_LIB = $(BGLDA_PROJ_BLD_DIR)/bglda
+BGLDA_LIB = $(BGLDA_PROJ_SRC_DIR)/bglda
 
 BGLDA_SOURCES = $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda/*) $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda_run)
 
 $(BGLDA_LIB): $(BGLDA_PROJ_SRC_DIR)/setup.py $(BGLDA_SOURCES) $(LOWL_LIB) $(PYLOWL_LIB)
-	mkdir -p $(BGLDA_PROJ_BLD_DIR)
-	cd $(BGLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py build_ext --build-lib $(CURDIR)/$(BGLDA_PROJ_BLD_DIR) --build-temp $(CURDIR)/$(BGLDA_PROJ_BLD_DIR) --cython-c-in-temp --library-dirs $(CURDIR)/$(LOWL_BLD_DIR):$(CURDIR)/$(PYLOWL_BLD_DIR) --include-dirs $(CURDIR)/$(LOWL_SRC_DIR):$(CURDIR)/$(PYLOWL_SRC_DIR)
+	cd $(BGLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py build_ext --inplace
 
 .PHONY: bglda
 bglda: $(BGLDA_LIB)
 
 .PHONY: bglda-fat
 bglda-fat: $(BGLDA_LIB)
-	cp $(LOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
-	cp $(PYLOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
+	cp $(LOWL_LIB) $(BGLDA_PROJ_SRC_DIR)/
+	cp $(PYLOWL_LIB) $(BGLDA_PROJ_SRC_DIR)/
 
 .PHONY: bglda-install
 bglda-install: bglda-fat
-	cp $(BGLDA_PROJ_SRC_DIR)/bglda_run $(BGLDA_PROJ_BLD_DIR)/
-	cp $(BGLDA_PROJ_SRC_DIR)/bglda/* $(BGLDA_PROJ_BLD_DIR)/bglda/
-	cd $(BGLDA_PROJ_BLD_DIR) && $(PYTHON) $(CURDIR)/$(BGLDA_PROJ_SRC_DIR)/setup.py install $(DISTUTILS_INSTALL_FLAGS)
+	cd $(BGLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py install $(DISTUTILS_INSTALL_FLAGS)
+
+.PHONY: bglda-clean
+bglda-clean:
+	rm -f $(BGLDA_PROJ_SRC_DIR)/bglda/core.c
+	rm -f $(BGLDA_PROJ_SRC_DIR)/bglda/core$(SHLIB_SUFFIX)
