--- a/src/proj/pflda/Makefile.in
+++ b/src/proj/pflda/Makefile.in
@@ -1,22 +1,23 @@
-PFLDA_LIB = $(PFLDA_PROJ_BLD_DIR)/pflda
+PFLDA_LIB = $(PFLDA_PROJ_SRC_DIR)/pflda
 
 PFLDA_SOURCES = $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda/*) $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda_run_*)
 
 $(PFLDA_LIB): $(PFLDA_PROJ_SRC_DIR)/setup.py $(PFLDA_SOURCES) $(LOWL_LIB) $(PYLOWL_LIB)
-	mkdir -p $(PFLDA_PROJ_BLD_DIR)
-	cd $(PFLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py build_ext --build-lib $(CURDIR)/$(PFLDA_PROJ_BLD_DIR) --build-temp $(CURDIR)/$(PFLDA_PROJ_BLD_DIR) --cython-c-in-temp --library-dirs $(CURDIR)/$(LOWL_BLD_DIR):$(CURDIR)/$(PYLOWL_BLD_DIR) --include-dirs $(CURDIR)/$(LOWL_SRC_DIR):$(CURDIR)/$(PYLOWL_SRC_DIR)
+	cd $(PFLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py build_ext --inplace
 
 .PHONY: pflda
 pflda: $(PFLDA_LIB)
 
 .PHONY: pflda-fat
 pflda-fat: $(PFLDA_LIB)
-	cp $(LOWL_LIB) $(PFLDA_PROJ_BLD_DIR)/
-	cp $(PYLOWL_LIB) $(PFLDA_PROJ_BLD_DIR)/
+	cp $(LOWL_LIB) $(PFLDA_PROJ_SRC_DIR)/
+	cp $(PYLOWL_LIB) $(PFLDA_PROJ_SRC_DIR)/
 
 .PHONY: pflda-install
 pflda-install: pflda-fat
-	cp $(PFLDA_PROJ_SRC_DIR)/pflda_run_gibbs $(PFLDA_PROJ_BLD_DIR)/
-	cp $(PFLDA_PROJ_SRC_DIR)/pflda_run_pf $(PFLDA_PROJ_BLD_DIR)/
-	cp $(PFLDA_PROJ_SRC_DIR)/pflda/* $(PFLDA_PROJ_BLD_DIR)/pflda/
-	cd $(PFLDA_PROJ_BLD_DIR) && $(PYTHON) $(CURDIR)/$(PFLDA_PROJ_SRC_DIR)/setup.py install $(DISTUTILS_INSTALL_FLAGS)
+	cd $(PFLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py install $(DISTUTILS_INSTALL_FLAGS)
+
+.PHONY: pflda-clean
+pflda-clean:
+	rm -f $(PFLDA_PROJ_SRC_DIR)/pflda/core.c
+	rm -f $(PFLDA_PROJ_SRC_DIR)/pflda/core$(SHLIB_SUFFIX)
