--- a/src/pylowl/Makefile.in
+++ b/src/pylowl/Makefile.in
@@ -1,28 +1,30 @@
 PYLOWL_LIB_FILENAME = pylowl$(SHLIB_SUFFIX)
-PYLOWL_LIB = $(PYLOWL_BLD_DIR)/$(PYLOWL_LIB_FILENAME)
+PYLOWL_LIB = $(PYLOWL_SRC_DIR)/$(PYLOWL_LIB_FILENAME)
 
 PYLOWL_PYX = $(PYLOWL_SRC_DIR)/pylowl.pyx
 PYLOWL_LOWL_PXD = $(PYLOWL_SRC_DIR)/lowl.pxd
 PYLOWL_SOURCES = $(PYLOWL_LOWL_PXD) $(PYLOWL_PYX)
 
 $(PYLOWL_LIB): $(PYLOWL_SRC_DIR)/setup.py $(PYLOWL_SOURCES) $(LOWL_LIB)
-	mkdir -p $(PYLOWL_BLD_DIR)
-	cd $(PYLOWL_SRC_DIR) && $(PYTHON) setup.py build_ext --build-lib $(CURDIR)/$(PYLOWL_BLD_DIR) --build-temp $(CURDIR)/$(PYLOWL_BLD_DIR) --cython-c-in-temp --library-dirs $(CURDIR)/$(LOWL_BLD_DIR) --include-dirs $(CURDIR)/$(LOWL_SRC_DIR)
+	cd $(PYLOWL_SRC_DIR) && $(PYTHON) setup.py build_ext --inplace
 
 .PHONY: pylowl
 pylowl: $(PYLOWL_LIB)
 
 .PHONY: pylowl-fat
 pylowl-fat: $(PYLOWL_LIB)
-	cp $(LOWL_LIB) $(PYLOWL_BLD_DIR)/
+	cp $(LOWL_LIB) $(PYLOWL_SRC_DIR)/
 
 .PHONY: pylowl-tests
-pylowl-tests: export $(SHLIB_PATH_ENV_VAR)=$(LOWL_BLD_DIR)
-pylowl-tests: export PYTHONPATH=$(PYLOWL_BLD_DIR)
+pylowl-tests: export $(SHLIB_PATH_ENV_VAR)=../lowl
 pylowl-tests: $(PYLOWL_LIB) $(PYLOWL_PYX)
-	$(PYTHON) -m doctest --doctest-extension=pyx -v $(PYLOWL_PYX)
+	cd $(PYLOWL_SRC_DIR) && $(PYTHON) -m doctest --doctest-extension=pyx -v $(PYLOWL_PYX)
 
 .PHONY: pylowl-install
 pylowl-install: $(PYLOWL_LIB)
-	cp $(PYLOWL_PYX) $(PYLOWL_BLD_DIR)/
-	cd $(PYLOWL_BLD_DIR) && $(PYTHON) $(CURDIR)/$(PYLOWL_SRC_DIR)/setup.py install $(DISTUTILS_INSTALL_FLAGS)
+	cd $(PYLOWL_SRC_DIR) && $(PYTHON) setup.py install $(DISTUTILS_INSTALL_FLAGS)
+
+.PHONY: pylowl-clean
+pylowl-clean:
+	rm -f $(PYLOWL_SRC_DIR)/pylowl.c
+	rm -f $(PYLOWL_SRC_DIR)/pylowl$(SHLIB_SUFFIX)
