copy src-to-build sketch

--- a/src/lowl/Makefile.in
+++ b/src/lowl/Makefile.in
@@ -1,37 +1,33 @@
+SRC_FILES += $(wildcard $(LOWL_SRC_DIR)/*)
+
 LOWL_LIB_SHORTNAME = lowl
 LOWL_LIB_NAME = lib$(LOWL_LIB_SHORTNAME)$(SHLIB_SUFFIX)
 LOWL_LIB_FILENAME = $(LOWL_LIB_NAME)
-LOWL_LIB = $(LOWL_SRC_DIR)/$(LOWL_LIB_FILENAME)
+LOWL_LIB = $(LOWL_BLD_DIR)/$(LOWL_LIB_FILENAME)
 
-LOWL_TESTS_SOURCE = $(LOWL_SRC_DIR)/tests.c
-LOWL_TESTS = $(LOWL_SRC_DIR)/tests
+LOWL_TESTS_SOURCE = $(LOWL_BLD_DIR)/tests.c
+LOWL_TESTS = $(LOWL_BLD_DIR)/tests
 
-LOWL_SOURCES = $(filter-out $(LOWL_TESTS_SOURCE),$(wildcard $(LOWL_SRC_DIR)/*.c))
-LOWL_OBJECTS = $(patsubst $(LOWL_SRC_DIR)/%.c,$(LOWL_SRC_DIR)/%.o,$(LOWL_SOURCES))
+LOWL_SOURCES = $(filter-out $(LOWL_TESTS_SOURCE),$(wildcard $(LOWL_BLD_DIR)/*.c))
+LOWL_OBJECTS = $(patsubst $(LOWL_BLD_DIR)/%.c,$(LOWL_BLD_DIR)/%.o,$(LOWL_SOURCES))
 
-$(LOWL_SRC_DIR)/%.o: $(LOWL_SRC_DIR)/%.c $(LOWL_SRC_DIR)/%.h
+$(LOWL_BLD_DIR)/%.o: $(LOWL_BLD_DIR)/%.c $(LOWL_BLD_DIR)/%.h
 	$(CC) $(CFLAGS) -fPIC -o $@ -c $<
 
 $(LOWL_LIB): $(LOWL_OBJECTS)
 	$(LD) $(LDFLAGS) -shared -Wl,$(SHLIB_NAME_FLAG),$(LOWL_LIB_NAME) -o $(LOWL_LIB) $(LOWL_OBJECTS) -lm
 
 $(LOWL_TESTS): $(LOWL_TESTS_SOURCE) $(LOWL_LIB)
-	$(CC) $(CFLAGS) -o $@ $< -L$(LOWL_SRC_DIR) -l$(LOWL_LIB_SHORTNAME) -lm
+	$(CC) $(CFLAGS) -o $@ $< -L$(LOWL_BLD_DIR) -l$(LOWL_LIB_SHORTNAME) -lm
 
 .PHONY: lowl
 lowl: $(LOWL_LIB)
 
 .PHONY: lowl-tests
-lowl-tests: export $(SHLIB_PATH_ENV_VAR)=$(LOWL_SRC_DIR)
+lowl-tests: export $(SHLIB_PATH_ENV_VAR)=$(LOWL_BLD_DIR)
 lowl-tests: $(LOWL_TESTS)
 	./$(LOWL_TESTS)
 
 .PHONY: lowl-install
 lowl-install: $(LOWL_LIB)
 	install -m 0755 $(LOWL_LIB) $(INSTALL_PREFIX)/lib
-
-.PHONY: lowl-clean
-lowl-clean:
-	rm -f $(LOWL_OBJECTS)
-	rm -f $(LOWL_LIB)
-	rm -f $(LOWL_TESTS)
