--- a/src/proj/bglda/Makefile.in
+++ b/src/proj/bglda/Makefile.in
@@ -1,23 +1,20 @@
-BGLDA_LIB = $(BGLDA_PROJ_SRC_DIR)/bglda
+SRC_FILES += $(wildcard $(BGLDA_PROJ_SRC_DIR)/*)
 
-BGLDA_SOURCES = $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda/*) $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda_run)
+BGLDA_LIB = $(BGLDA_PROJ_BLD_DIR)/bglda
 
-$(BGLDA_LIB): $(BGLDA_PROJ_SRC_DIR)/setup.py $(BGLDA_SOURCES) $(LOWL_LIB) $(PYLOWL_LIB)
-	cd $(BGLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py build_ext --inplace
+BGLDA_SOURCES = $(wildcard $(BGLDA_PROJ_BLD_DIR)/bglda/*) $(wildcard $(BGLDA_PROJ_BLD_DIR)/bglda_run)
+
+$(BGLDA_LIB): $(BGLDA_PROJ_BLD_DIR)/setup.py $(BGLDA_SOURCES) $(LOWL_LIB) $(PYLOWL_LIB)
+	cd $(BGLDA_PROJ_BLD_DIR) && $(PYTHON) setup.py build_ext --inplace
 
 .PHONY: bglda
 bglda: $(BGLDA_LIB)
 
 .PHONY: bglda-fat
 bglda-fat: $(BGLDA_LIB)
-	cp $(LOWL_LIB) $(BGLDA_PROJ_SRC_DIR)/
-	cp $(PYLOWL_LIB) $(BGLDA_PROJ_SRC_DIR)/
+	cp $(LOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
+	cp $(PYLOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
 
 .PHONY: bglda-install
 bglda-install: bglda-fat
-	cd $(BGLDA_PROJ_SRC_DIR) && $(PYTHON) setup.py install $(DISTUTILS_INSTALL_FLAGS)
-
-.PHONY: bglda-clean
-bglda-clean:
-	rm -f $(BGLDA_PROJ_SRC_DIR)/bglda/core.c
-	rm -f $(BGLDA_PROJ_SRC_DIR)/bglda/core$(SHLIB_SUFFIX)
+	cd $(BGLDA_PROJ_BLD_DIR) && $(PYTHON) setup.py install $(DISTUTILS_INSTALL_FLAGS)
