--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,11 +1,14 @@
-LOWL_SRC_DIR = $(SRC_DIR)/lowl
-LOWL_BLD_DIR = $(BLD_DIR)/lowl
-include $(LOWL_SRC_DIR)/Makefile.in
+.PHONY: src-help
+src-help: lowl-help pylowl-help proj-help
 
-PYLOWL_SRC_DIR = $(SRC_DIR)/pylowl
-PYLOWL_BLD_DIR = $(BLD_DIR)/pylowl
-include $(PYLOWL_SRC_DIR)/Makefile.in
+LOWL_SRC_DIR := $(SRC_DIR)/lowl
+LOWL_BLD_DIR := $(BLD_DIR)/lowl
+include $(LOWL_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
 
-PROJ_SRC_DIR = $(SRC_DIR)/proj
-PROJ_BLD_DIR = $(BLD_DIR)/proj
-include $(PROJ_SRC_DIR)/Makefile.in
+PYLOWL_SRC_DIR := $(SRC_DIR)/pylowl
+PYLOWL_BLD_DIR := $(BLD_DIR)/pylowl
+include $(PYLOWL_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
+
+PROJ_SRC_DIR := $(SRC_DIR)/proj
+PROJ_BLD_DIR := $(BLD_DIR)/proj
+include $(PROJ_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
