--- a/src/proj/Makefile.in
+++ b/src/proj/Makefile.in
@@ -1,7 +1,10 @@
-BGLDA_PROJ_SRC_DIR = $(PROJ_SRC_DIR)/bglda
-BGLDA_PROJ_BLD_DIR = $(PROJ_BLD_DIR)/bglda
-include $(BGLDA_PROJ_SRC_DIR)/Makefile.in
+.PHONY: proj-help
+proj-help: bglda-help pflda-help
 
-PFLDA_PROJ_SRC_DIR = $(PROJ_SRC_DIR)/pflda
-PFLDA_PROJ_BLD_DIR = $(PROJ_BLD_DIR)/pflda
-include $(PFLDA_PROJ_SRC_DIR)/Makefile.in
+BGLDA_PROJ_SRC_DIR := $(PROJ_SRC_DIR)/bglda
+BGLDA_PROJ_BLD_DIR := $(PROJ_BLD_DIR)/bglda
+include $(BGLDA_PROJ_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
+
+PFLDA_PROJ_SRC_DIR := $(PROJ_SRC_DIR)/pflda
+PFLDA_PROJ_BLD_DIR := $(PROJ_BLD_DIR)/pflda
+include $(PFLDA_PROJ_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
