--- a/src/proj/pflda/Makefile.in
+++ b/src/proj/pflda/Makefile.in
@@ -9,9 +9,10 @@ pflda-help:
 
 PFLDA_LIB := $(PFLDA_PROJ_BLD_DIR)/pflda
 
-PFLDA_SOURCES := $(wildcard $(PFLDA_PROJ_BLD_DIR)/pflda/*) $(wildcard $(PFLDA_PROJ_BLD_DIR)/pflda_run_*)
+PFLDA_PROJ_SRC_SOURCES := $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda/*) $(PFLDA_PROJ_SRC_DIR)/pylowl.pxd $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda_run_*)
+PFLDA_PROJ_BLD_SOURCES := $(patsubst $(PFLDA_PROJ_SRC_DIR)/%,$(PFLDA_PROJ_BLD_DIR)/%,$(PFLDA_PROJ_SRC_SOURCES))
 
-$(PFLDA_LIB): $(PFLDA_PROJ_BLD_DIR)/setup.py $(PFLDA_SOURCES) $(LOWL_LIB) $(PYLOWL_LIB)
+$(PFLDA_LIB): $(PFLDA_PROJ_BLD_DIR)/setup.py $(PFLDA_PROJ_BLD_SOURCES) $(PYLOWL_LIB)
 	cd $(PFLDA_PROJ_BLD_DIR) && $(PYTHON) setup.py build_ext --inplace
 
 .PHONY: pflda
