--- a/src/pylowl/Makefile.in
+++ b/src/pylowl/Makefile.in
@@ -11,9 +11,9 @@ pylowl-help:
 PYLOWL_LIB_FILENAME := pylowl$(SHLIB_SUFFIX)
 PYLOWL_LIB := $(PYLOWL_BLD_DIR)/$(PYLOWL_LIB_FILENAME)
 
-PYLOWL_PYX := $(PYLOWL_BLD_DIR)/pylowl.pyx
-PYLOWL_LOWL_PXD := $(PYLOWL_BLD_DIR)/lowl.pxd
-PYLOWL_SOURCES := $(PYLOWL_LOWL_PXD) $(PYLOWL_PYX)
+PYLOWL_PYX_FILENAME := pylowl.pyx
+PYLOWL_PYX := $(PYLOWL_BLD_DIR)/$(PYLOWL_PYX_FILENAME)
+PYLOWL_SOURCES := $(PYLOWL_BLD_DIR)/lowl.pxd $(PYLOWL_PYX)
 
 $(PYLOWL_LIB): $(PYLOWL_BLD_DIR)/setup.py $(PYLOWL_SOURCES) $(LOWL_LIB)
 	cd $(PYLOWL_BLD_DIR) && $(PYTHON) setup.py build_ext --inplace
@@ -26,9 +26,8 @@ pylowl-fat: $(PYLOWL_LIB)
 	cp $(LOWL_LIB) $(PYLOWL_BLD_DIR)/
 
 .PHONY: pylowl-tests
-pylowl-tests: export $(SHLIB_PATH_ENV_VAR)=../lowl
-pylowl-tests: $(PYLOWL_LIB) $(PYLOWL_PYX)
-	cd $(PYLOWL_BLD_DIR) && $(PYTHON) -m doctest --doctest-extension=pyx -v $(PYLOWL_PYX)
+pylowl-tests: pylowl-fat
+	cd $(PYLOWL_BLD_DIR) && $(PYTHON) -m doctest --doctest-extension=pyx -v $(PYLOWL_PYX_FILENAME)
 
 .PHONY: pylowl-install
 pylowl-install: $(PYLOWL_LIB)
