add support files to fat targets

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -3,12 +3,12 @@ src-help: lowl-help pylowl-help proj-help
 
 LOWL_SRC_DIR := $(SRC_DIR)/lowl
 LOWL_BLD_DIR := $(BLD_DIR)/lowl
-include $(LOWL_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
+include $(LOWL_SRC_DIR)/Makefile.in
 
 PYLOWL_SRC_DIR := $(SRC_DIR)/pylowl
 PYLOWL_BLD_DIR := $(BLD_DIR)/pylowl
-include $(PYLOWL_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
+include $(PYLOWL_SRC_DIR)/Makefile.in
 
 PROJ_SRC_DIR := $(SRC_DIR)/proj
 PROJ_BLD_DIR := $(BLD_DIR)/proj
-include $(PROJ_SRC_DIR)/$(INCLUDE_MAKEFILE_FILENAME)
+include $(PROJ_SRC_DIR)/Makefile.in
