--- a/src/proj/bglda/Makefile.in
+++ b/src/proj/bglda/Makefile.in
@@ -11,6 +11,8 @@ BGLDA_LIB := $(BGLDA_PROJ_BLD_DIR)/bglda
 
 BGLDA_PROJ_SRC_SOURCES := $(wildcard $(BGLDA_PROJ_SRC_DIR)/bglda/*) $(BGLDA_PROJ_SRC_DIR)/pylowl.pxd $(BGLDA_PROJ_SRC_DIR)/bglda_run
 BGLDA_PROJ_BLD_SOURCES := $(patsubst $(BGLDA_PROJ_SRC_DIR)/%,$(BGLDA_PROJ_BLD_DIR)/%,$(BGLDA_PROJ_SRC_SOURCES))
+BGLDA_PROJ_SRC_SUPPORT := $(filter-out $(BGLDA_PROJ_SRC_SOURCES) %/bglda %/Makefile.in,$(wildcard $(BGLDA_PROJ_SRC_DIR)/*))
+BGLDA_PROJ_BLD_SUPPORT := $(patsubst $(BGLDA_PROJ_SRC_DIR)/%,$(BGLDA_PROJ_BLD_DIR)/%,$(BGLDA_PROJ_SRC_SUPPORT))
 
 $(BGLDA_LIB): $(BGLDA_PROJ_BLD_DIR)/setup.py $(BGLDA_PROJ_BLD_SOURCES) $(PYLOWL_LIB)
 	cd $(BGLDA_PROJ_BLD_DIR) && $(PYTHON) setup.py build_ext --inplace
@@ -19,7 +21,7 @@ $(BGLDA_LIB): $(BGLDA_PROJ_BLD_DIR)/setup.py $(BGLDA_PROJ_BLD_SOURCES) $(PYLOWL_
 bglda: $(BGLDA_LIB)
 
 .PHONY: bglda-fat
-bglda-fat: $(BGLDA_LIB)
+bglda-fat: $(BGLDA_LIB) $(BGLDA_PROJ_BLD_SUPPORT)
 	cp $(LOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
 	cp $(PYLOWL_LIB) $(BGLDA_PROJ_BLD_DIR)/
 
