--- a/src/proj/pflda/Makefile.in
+++ b/src/proj/pflda/Makefile.in
@@ -11,6 +11,8 @@ PFLDA_LIB := $(PFLDA_PROJ_BLD_DIR)/pflda
 
 PFLDA_PROJ_SRC_SOURCES := $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda/*) $(PFLDA_PROJ_SRC_DIR)/pylowl.pxd $(wildcard $(PFLDA_PROJ_SRC_DIR)/pflda_run_*)
 PFLDA_PROJ_BLD_SOURCES := $(patsubst $(PFLDA_PROJ_SRC_DIR)/%,$(PFLDA_PROJ_BLD_DIR)/%,$(PFLDA_PROJ_SRC_SOURCES))
+PFLDA_PROJ_SRC_SUPPORT := $(filter-out $(PFLDA_PROJ_SRC_SOURCES) %/pflda %/experiments %/Makefile.in,$(wildcard $(PFLDA_PROJ_SRC_DIR)/*)) $(wildcard $(PFLDA_PROJ_SRC_DIR)/experiments/*)
+PFLDA_PROJ_BLD_SUPPORT := $(patsubst $(PFLDA_PROJ_SRC_DIR)/%,$(PFLDA_PROJ_BLD_DIR)/%,$(PFLDA_PROJ_SRC_SUPPORT))
 
 $(PFLDA_LIB): $(PFLDA_PROJ_BLD_DIR)/setup.py $(PFLDA_PROJ_BLD_SOURCES) $(PYLOWL_LIB)
 	cd $(PFLDA_PROJ_BLD_DIR) && $(PYTHON) setup.py build_ext --inplace
@@ -19,7 +21,7 @@ $(PFLDA_LIB): $(PFLDA_PROJ_BLD_DIR)/setup.py $(PFLDA_PROJ_BLD_SOURCES) $(PYLOWL_
 pflda: $(PFLDA_LIB)
 
 .PHONY: pflda-fat
-pflda-fat: $(PFLDA_LIB)
+pflda-fat: $(PFLDA_LIB) $(PFLDA_PROJ_BLD_SUPPORT)
 	cp $(LOWL_LIB) $(PFLDA_PROJ_BLD_DIR)/
 	cp $(PYLOWL_LIB) $(PFLDA_PROJ_BLD_DIR)/
 
