m0 and m1 parallel, initial file import (does not run)

--- a/data/txt/.gitignore
+++ b/data/txt/.gitignore
@@ -1,9 +1,11 @@
-tng.*
-tng-*
-20news-*
-twitter
-gt
-gigaword-*
-ds2
-simulation
-lda_input.txt
+/tng*
+/tng.*
+/tng-*
+/20news-*
+/twitter
+/gt
+/gigaword-*
+/ds2
+/ds2.*
+/simulation
+/lda_input.txt
